--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Categories.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Categories.razor
@@ -40,19 +40,14 @@
     
     [Inject] IDialogService DialogService { get; set; } = null!;
     
-    private async Task EditCategory(CategoryDto? category)
+    private async Task EditCategory(CategoryDto? oldCategory)
     {
-        if (category == null)
+        if (oldCategory == null)
         {
             return;
         }
 
-        var parameters = new DialogParameters<EditCategoryDialog>
-        {
-            { x => x.Name, category.Name },
-            { x => x.Description, category.Description },
-            { x => x.CategoryColor, category.Color }
-        };
+        var parameters = new DialogParameters<EditCategoryDialog> { { x => x.OldCategory, oldCategory } };
 
         var dialog = await DialogService.ShowAsync<EditCategoryDialog>("Edit category", parameters, _dialogOptions);
         var dialogResult = await dialog.Result;
@@ -61,8 +56,10 @@
         {
             // TODO: Post changes to API
 
-            var index = _categories.IndexOf(category);
+            var index = _categories.IndexOf(oldCategory);
             _categories[index] = updatedCategory;
+            
+            StateHasChanged();
         }
     }
    
