Updated Categories page with new UI components and layout changes.
- Replaced <h3> with MudText for better styling.
- Added MudStack for button alignment.
- Added Add Item button to open dialog.
- Updated MudDataGrid with new class and margin.

--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Categories.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Categories.razor
@@ -3,9 +3,13 @@
 @using MudBlazorApp.Client.Pages.Components
 @using MudBlazorApp.Client.Pages.Dialogs
 
-<h3>Categories</h3>
+<MudText Typo="Typo.h4" Class="bt-4">Categories</MudText>
 
-<MudDataGrid Items="@_categories" Loading="@_loading" LoadingProgressColor="Color.Info" Hover="true">
+<MudStack Row Justify="Justify.FlexEnd" Class="mt-4">
+    <MudButton OnClick="@OpenAddDialog" Color="@Color.Success" Class="add-item-btn">Add Item</MudButton>
+</MudStack>
+
+<MudDataGrid Items="@_categories" Loading="@_loading" LoadingProgressColor="Color.Info" Hover="true" Class="mt-4">
     <NoRecordsContent>
         <MudText Typo="Typo.h6">No categories found</MudText>
         <MudButton Color="Color.Primary" @onclick="OpenAddDialog">Create new category</MudButton>
