Updated EditCategoryDialog to add padding to text fields
- Added padding to Name field
- Added padding to Description field
- Added padding to Color field

--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/EditCategoryDialog.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/EditCategoryDialog.razor
@@ -6,18 +6,22 @@
     </TitleContent>
 
     <DialogContent>
+        
         <MudTextField @bind-Value="Name"
                       Label="Name"
                       Required="true"
-                      RequiredError="Name is required"/>
+                      RequiredError="Name is required"
+                      Class="pt-4"/>
 
         <MudTextField @bind-Value="Description"
-                      Label="Description"/>
+                      Label="Description"
+                      Class="pt-4"/>
 
         <MudTextField @bind-Value="CategoryColor"
                       Label="Color"
                       Required="true"
-                      RequiredError="Color is required"/>
+                      RequiredError="Color is required"
+                      Class="pt-4"/>
 
     </DialogContent>
 
