--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/AddCategoryDialog.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/AddCategoryDialog.razor
@@ -4,18 +4,23 @@
     </TitleContent>
 
     <DialogContent>
-            <MudTextField @bind-Value="Name"
-                          Label="Name"
-                          Required="true"
-                          RequiredError="Name is required"/>
+        <MudTextField @bind-Value="Name"
+                      Label="Name"
+                      Required="true"
+                      RequiredError="Name is required"/>
 
-            <MudTextField @bind-Value="Description"
-                          Label="Description"/>
+        <MudTextField @bind-Value="Description"
+                      Label="Description"/>
 
-            <MudTextField @bind-Value="CategoryColor"
-                          Label="Color"
-                          Required="true"
-                          RequiredError="Color is required"/>
+        <MudColorPicker @bind-Text="CategoryColor"
+                        Class="mud-width-full"
+                        ShowAlpha="false"
+                        Label="Color"
+                        Required="true"
+                        RequiredError="Color is required"
+                        ColorPickerView="ColorPickerView.GridCompact"/>
+
+        <div class="mud-width-full rounded py-4" style="@($"background-color:{CategoryColor};")"></div>
 
     </DialogContent>
 
