Updated button colors in AddCategoryDialog and EditCategoryDialog.

--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/EditCategoryDialog.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/EditCategoryDialog.razor
@@ -29,10 +29,10 @@
 
     <DialogActions>
         <MudButton Variant="Variant.Text" 
-                   Color="Color.Secondary" 
+                   Color="Color.Error" 
                    OnClick="@Cancel">Cancel</MudButton>
         <MudButton Variant="Variant.Filled" 
-                   Color="Color.Secondary" 
+                   Color="Color.Info" 
                    OnClick="@Submit">Submit</MudButton>
     </DialogActions>
 </MudDialog>
