--- a/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/AddCategoryDialog.razor
+++ b/src/MudBlazorApp/MudBlazorApp.Client/Pages/Dialogs/AddCategoryDialog.razor
@@ -26,10 +26,10 @@
 
     <DialogActions>
         <MudButton Variant="Variant.Text" 
-                   Color="Color.Secondary" 
+                   Color="Color.Error" 
                    OnClick="@Cancel">Cancel</MudButton>
         <MudButton Variant="Variant.Filled" 
-                   Color="Color.Secondary" 
+                   Color="Color.Success" 
                    OnClick="@Submit">Submit</MudButton>
     </DialogActions>
 </MudDialog>
